完成了分页查询

--- a/moon/WebRoot/resources/sg/css/tz-page.css
+++ b/moon/WebRoot/resources/sg/css/tz-page.css
@@ -1,7 +1,7 @@
 /*信息录入底部框架设置*/
 .xxlr_btm{width:100%;height:55px;color:#fff;text-align:center;line-height:55px;position:relative;bottom:0px;}
 .dataTables_paginate{position: relative;height: 35px;}
-.tzPage{font-size:12px;margin-top: 5px;position: absolute;top:1px;right:0px;}
+.tzPage{font-size:12px;margin-top: 10px;float: right;margin-left: 10px;}
 .tzPage a{text-decoration:none;border:solid 1px #ccc;color:#999;}
 .tzPage a,.tzPage span{display:block;float:left;padding:0em 0.5em;margin-right:5px;margin-bottom:5px;min-width:1em;text-align:center;line-height: 22px;height: 22px;}
 .tzPage .current{background:#e5e5e5;color:#999;border:solid 1px #e5e5e5;}
