--- a/Music_2.0/.settings/org.eclipse.wst.common.component
+++ b/Music_2.0/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Arry_Tz_Music_V2.0">
+    <wb-module deploy-name="Music_2.0">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Arry_Tz_Music_V2.0"/>
-        <property name="java-output-path" value="/Arry_Tz_Music_V2.0/WebRoot/WEB-INF/classes"/>
+        <property name="java-output-path" value="/Music_2.0/WebRoot/WEB-INF/classes"/>
+        <property name="context-root" value="Music_2.0"/>
     </wb-module>
 </project-modules>
