--- a/moon/WebRoot/resources/css/yx_css.css
+++ b/moon/WebRoot/resources/css/yx_css.css
@@ -1,1 +1,3 @@
 .yx_select {order: 0 !important;-webkit-appearance: none;-moz-appearance: none;background: #ccc url(img/demo/select-arrow.png) no-repeat 90% center;width: 120px;text-indent: 0.01px;	color: #000;border-radius: 5px;padding: 5px;box-shadow: inset 0 0 5px rgba(000, 000, 000, 0.5);}
+#addUser{position:absolute;display:inline-block;margin:10px;cursor:pointer;width:40px;height:20px;border:1px solid #999;text-align:center;line-height:20px;border-radius:4px}
+#addUser:hover{color:#fff;font-size:12px;border:1px solid #fff;}
