--- a/ksd-project/.settings/org.eclipse.wst.common.component
+++ b/ksd-project/.settings/org.eclipse.wst.common.component
@@ -2,9 +2,8 @@
     <wb-module deploy-name="ksd-project">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <property name="context-root" value="ksd-project"/>
         <property name="java-output-path" value="/ksd-project/target/classes"/>
     </wb-module>
